--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -2,22 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/webjars/bootstrap/5.3.0/css/bootstrap.min.css">
+	<script src="/webjars/popper.js/2.11.7/umd/popper.min.js"></script>
+	<script src="/webjars/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+	<img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;">
+    <title>ログイン</title>
 </head>
 <body>
 <div class="container">
-    <h2>Login</h2>
+    <h2>ログイン</h2>
     <form th:action="@{/login}" method="post">
         <div class="mb-3">
-            <label for="username">Email</label>
+            <label for="username">ユーザー名</label>
             <input type="email" class="form-control" id="username" name="username">
         </div>
         <div class="mb-3">
-            <label for="password">Password</label>
+            <label for="password">パスワード</label>
             <input type="password" class="form-control" id="password" name="password">
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary">ログイン</button>
+		<a href="#" class="btn btn-primary">新規登録</a>
     </form>
 </div>
 </body>
