--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -10,8 +10,8 @@
     <h2>Login</h2>
     <form th:action="@{/login}" method="post">
         <div class="mb-3">
-            <label for="username">Email</label>
-            <input type="email" class="form-control" id="username" name="username">
+            <label for="username">User</label>
+            <input type="text" class="form-control" id="username" name="username">
         </div>
         <div class="mb-3">
             <label for="password">Password</label>
