--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/webjars/bootstrap/5.3.0/css/bootstrap.min.css">
-	<script src="/webjars/popper.js/2.11.7/umd/popper.min.js"></script>
-	<script src="/webjars/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-	<img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;">
-    <title>ログイン</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.0/css/bootstrap.min.css}">
+	<title>ログイン</title>
 </head>
 <body>
 <div class="container">
-    <h2>ログイン</h2>
-    <form th:action="@{/login}" method="post">
-        <div class="mb-3">
-            <label for="name">ユーザー名</label>
-            <input type="text" class="form-control" id="name" name="name">
-        </div>
-        <div class="mb-3">
-            <label for="password">パスワード</label>
-            <input type="password" class="form-control" id="password" name="password">
-        </div>
-        <button type="submit" class="btn btn-primary">ログイン</button>
-		<a href="#" class="btn btn-primary">新規登録</a>
-    </form>
+	<img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;">
+	<h2>ログイン</h2>
+	<form th:action="@{/login}" method="post">
+		<div class="mb-3">
+			<label for="name">ユーザー名</label>
+			<input type="text" class="form-control" id="name" name="name">
+		</div>
+		<div class="mb-3">
+			<label for="password">パスワード</label>
+			<input type="password" class="form-control" id="password" name="password">
+		</div>
+		<button type="submit" class="btn btn-primary">ログイン</button>
+		<a th:href="@{/register}" class="btn btn-secondary">新規登録</a>
+	</form>
 </div>
+
+<script th:src="@{/webjars/popper.js/2.11.7/umd/popper.min.js}" defer></script>
+<script th:src="@{/webjars/bootstrap/5.3.0/js/bootstrap.min.js}" defer></script>
+
 </body>
 </html>
