--- a/src/main/resources/templates/top/index.html
+++ b/src/main/resources/templates/top/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.0/css/bootstrap.min.css}">
+    <title>トップページ</title>
 </head>
 <body>
+<div class="container">
+    <img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;">
+    <h2>トップページ</h2>
+	<a th:href="@{/profile}" class="btn btn-secondary">プロフィール</a>
+</div>
+
+<script th:src="@{/webjars/popper.js/2.11.7/umd/popper.min.js}" defer></script>
+<script th:src="@{/webjars/bootstrap/5.3.0/js/bootstrap.min.js}" defer></script>
 
 </body>
 </html>
