--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -8,25 +8,39 @@
     <title>ログイン</title>
 </head>
 <body>
-<div class="container">
-    <img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;">
-    <h2>ログイン</h2>
-    <form th:action="@{/login}" method="post">
-        <div class="mb-3">
-            <label for="name">ユーザー名</label>
-            <input type="text" class="form-control" id="name" name="name">
+    <!-- ヘッダー -->
+    <header class="bg-light py-3">
+        <div class="container d-flex align-items-center">
+            <img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;" class="me-3">
+            <h2 class="mb-0">ログイン</h2>
         </div>
-        <div class="mb-3">
-            <label for="password">パスワード</label>
-            <input type="password" class="form-control" id="password" name="password">
+    </header>
+    
+    <div class="container mt-4">
+        <form th:action="@{/login}" method="post">
+            <div class="mb-3">
+                <label for="name">ユーザー名</label>
+                <input type="text" class="form-control" id="name" name="name">
+            </div>
+            <div class="mb-3">
+                <label for="password">パスワード</label>
+                <input type="password" class="form-control" id="password" name="password">
+            </div>
+            <button type="submit" class="btn btn-primary">ログイン</button>
+            <a th:href="@{/register}" class="btn btn-secondary">新規登録</a>
+        </form>
+    </div>
+    
+    <!-- フッター -->
+    <footer class="bg-light py-3 mt-5">
+        <div class="container text-center">
+            <p class="mb-0">© 2024 KazuhikoDemura. All Rights Reserved.</p>
+            <a href="#" class="text-decoration-none me-2">Privacy Policy</a>|
+            <a href="#" class="text-decoration-none ms-2">Terms of Service</a>
         </div>
-        <button type="submit" class="btn btn-primary">ログイン</button>
-        <a th:href="@{/register}" class="btn btn-secondary">新規登録</a>
-    </form>
-</div>
-
-<script th:src="@{/webjars/popper.js/2.11.7/umd/popper.min.js}" defer></script>
-<script th:src="@{/webjars/bootstrap/5.3.0/js/bootstrap.min.js}" defer></script>
-
+    </footer>
+    
+    <script th:src="@{/webjars/popper.js/2.11.7/umd/popper.min.js}" defer></script>
+    <script th:src="@{/webjars/bootstrap/5.3.0/js/bootstrap.min.js}" defer></script>
 </body>
 </html>
