--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
     xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.0/css/bootstrap.min.css}">
-    <title>ログイン</title>
+<head th:replace="~{layout/common :: common_head('ログイン', null)}">
 </head>
 <body>
     <!-- ヘッダー -->
-    <header class="bg-light py-3">
-        <div class="container d-flex align-items-center">
-            <img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;" class="me-3">
-            <h2 class="mb-0">ログイン</h2>
-        </div>
-    </header>
+    <header th:replace="~{layout/common :: common_header('ログイン')}"></header>
     
     <div class="container mt-4">
         <form th:action="@{/login}" method="post">
@@ -32,13 +23,7 @@
     </div>
     
     <!-- フッター -->
-    <footer class="bg-light py-3 mt-5">
-        <div class="container text-center">
-            <p class="mb-0">© 2024 KazuhikoDemura. All Rights Reserved.</p>
-            <a href="#" class="text-decoration-none me-2">Privacy Policy</a>|
-            <a href="#" class="text-decoration-none ms-2">Terms of Service</a>
-        </div>
-    </footer>
+    <footer th:insert="~{layout/common :: common_footer}"></footer>
     
     <script th:src="@{/webjars/popper.js/2.11.7/umd/popper.min.js}" defer></script>
     <script th:src="@{/webjars/bootstrap/5.3.0/js/bootstrap.min.js}" defer></script>
