--- a/src/main/resources/templates/top/index.html
+++ b/src/main/resources/templates/top/index.html
@@ -1,49 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
     xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.0/css/bootstrap.min.css}">
-    <title>トップページ</title>
+<head th:replace="~{layout/common :: common_head('トップページ', null)}">
 </head>
 <body>
     <!-- ヘッダー -->
-    <header class="bg-light py-3">
-        <div class="container d-flex align-items-center">
-            <img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;" class="me-3">
-            <h2 class="mb-0">トップページ</h2>
-            <div class="ms-auto">
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" 
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <span sec:authentication="principal.fullname"></span> さん
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" th:href="@{/top}">トップ</a>
-                            <a class="dropdown-item" th:href="@{/profile}">プロフィール</a>
-                            <a class="dropdown-item" href="#">トレーニング記録</a>
-                            <a class="dropdown-item" href="#">トレーニング種目</a>
-                            <a class="dropdown-item" href="#">進捗管理</a>
-                            <a class="dropdown-item" href="#">エクスポート</a>
-                            <div class="dropdown-divider"></div>
-                            <form method="post" th:action="@{/logout}">
-                                <button class="dropdown-item" type="submit">ログアウト</button>
-                            </form>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
+    <header th:insert="~{layout/common :: common_header('トップページ')}"></header>
     
     <div class="container mt-4">
-        <div class="container">
-            <img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;">
-            <h2>トップページ</h2>
-            <a th:href="@{/profile}" class="btn btn-secondary">プロフィール</a>
-        </div>
+<!--        <div class="container">-->
+<!--            <img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;">-->
+<!--            <h2>トップページ</h2>-->
+<!--            <a th:href="@{/profile}" class="btn btn-secondary">プロフィール</a>-->
+<!--        </div>-->
 <!--            <form th:action="@{/login}" method="post">-->
 <!--                <div class="mb-3">-->
 <!--                    <label for="name">ユーザー名</label>-->
@@ -59,13 +28,7 @@
     </div>
     
     <!-- フッター -->
-    <footer class="bg-light py-3 mt-5">
-        <div class="container text-center">
-            <p class="mb-0">© 2024 KazuhikoDemura. All Rights Reserved.</p>
-            <a href="#" class="text-decoration-none me-2">Privacy Policy</a>|
-            <a href="#" class="text-decoration-none ms-2">Terms of Service</a>
-        </div>
-    </footer>
+    <footer th:insert="~{layout/common :: common_footer}"></footer>
 
 <script th:src="@{/webjars/popper.js/2.11.7/umd/popper.min.js}" defer></script>
 <script th:src="@{/webjars/bootstrap/5.3.0/js/bootstrap.min.js}" defer></script>
