--- a/src/main/resources/templates/profile/index.html
+++ b/src/main/resources/templates/profile/index.html
@@ -17,7 +17,7 @@
 <div class="container">
     <img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;">
     <h2>プロフィール管理</h2>
-    <form id="profileForm" th:action="@{/profile/{id}}" method="post">
+    <id="profileForm" th:action="@{/profile/{id}(id=${profileForm})}" method="post" th:object="${profileForm}">
         
         <!-- ユーザー名 -->
         <div class="mb-3">
