--- a/src/main/resources/templates/layout/common.html
+++ b/src/main/resources/templates/layout/common.html
@@ -13,7 +13,7 @@
 <body>
     <header th:fragment="common_header(title)" class="bg-light py-3">
         <div class="container d-flex align-items-center">
-            <img src="/images/logo.jpg" alt="Logo" style="width: 100px; height: auto;" class="me-3">
+            <img src="/images/logo.png" alt="Logo" style="width: 100px; height: auto;" class="me-3">
             <h2 class="mb-0" th:text="${title}">Default Title</h2>
             <div class="ms-auto" sec:authorize="isAuthenticated()">
                 <ul class="navbar-nav">
